--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>React App</title>
+    <title>Monkey D Car</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
